--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,18 @@
 /* styles.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+* {
+    font-family: "Inter";
+}
+
+
+h1, h2, h3, h4, h5 {
+    font-family: "Unbounded";
+}
