--- a/src/app.css
+++ b/src/app.css
@@ -21,3 +21,15 @@ h1, h2, h3, h4, h5 {
 html {
     @apply bg-gray-800;
 }
+
+h1 {
+    @apply text-6xl font-bold;
+}
+
+h2 {
+    @apply text-4xl font-bold;
+}
+
+h3 {
+    @apply text-2xl font-bold;
+}
