--- a/src/app.css
+++ b/src/app.css
@@ -28,3 +28,64 @@ h2 {
 h3 {
     @apply text-2xl font-bold;
 }
+
+
+.resume {
+    --background : #eaebee;
+    --primary : #0b45a8;
+    --secondary : #1e2731;
+    background-color: var(--background);
+}
+
+/* Name */
+.resume h1 {
+    @apply text-3xl font-medium font-sans;
+    color : var(--secondary);
+}
+
+/* Labels */
+.resume h2{
+    @apply text-base font-medium font-sans uppercase;
+    color : var(--secondary);
+}
+
+/* Title */
+.resume h3 {
+    @apply text-base uppercase font-sans text-nowrap;
+    color : var(--primary);
+}
+
+/* Company / Location */
+.resume i {
+    @apply text-sm font-sans text-nowrap opacity-90;
+    color : var(--primary);
+}
+
+/* Work Time Range */
+.resume h4 {
+    @apply text-sm font-sans;
+    color : var(--secondary);
+}
+
+/* Contact Info */
+.resume p {
+    @apply text-xs font-sans;
+    color : var(--primary);
+}
+
+/* Work Details */
+.resume li {
+    @apply text-xs font-sans;
+    color : var(--secondary);
+}
+
+/* Education Time Range */
+.resume caption {
+    @apply text-xs font-sans text-nowrap opacity-70;
+    color : var(--secondary);
+}
+
+/* Separators */
+.resume span {
+    color : var(--secondary);
+}
