--- a/src/light-mode.css
+++ b/src/light-mode.css
@@ -27,5 +27,5 @@ html {
 }
 
 .light .subtle-tile {
-    @apply rounded-lg border bg-gray-500 bg-opacity-20;
+    @apply rounded-lg bg-gray-500 bg-opacity-40;
 }
